[tool.poetry]
name = "obsidian-pipeline"
version = "0.1.0"
description = ""
authors = ["dodonator <dodo@chaosdorf.de>"]
readme = "README.md"
packages = [{include = "obsidian_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
