[tool.poetry]
name = "obsidian-pipeline"
version = "0.1.0"
description = ""
authors = ["dodonator <dodo@chaosdorf.de>"]
readme = "README.md"
packages = [{include = "obsidian_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pandoc = "^2.3"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.1"
pylint = "^2.16.3"
rich = "^13.3.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
